tests/miniJava/neg/006553_mutation.MiniJava
class java { public static void Main ( String [ ] this java ) { { } } }
